<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能私教</string>
    <!--个人基本信息-->
    <string name="registerInfo">基本信息</string>

    <string name="name">姓名</string>
    <string name="phoneNum">手机号码</string>
    <string name="password">密码</string>
    <string name="verify_code">验证码</string>
    <string name="cid">客服号</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>

    <!--个人其他信息-->
    <string name="photo">头像</string>
    <string name="education_level">文化程度</string>
    <string name="occupation">从事职业</string>
    <string name="hometown">籍贯</string>
    <string name="detail_address">详细地址</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="county">区/县</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="nation">民族</string>

    <!--个人中心-->
    <string name="ct_user">个人中心</string>
    <string name="ct_name">姓名:</string>
    <string name="ct_age">年龄:</string>
    <string name="ct_grade">年级:</string>
    <string name="alter">修改</string>
    <string name="radar_change">雷达图</string>>

    <!--问卷界面-->
    <string name="primarySchool">小学</string>
    <string name="middleSchool">初中</string>
    <string name="bookVersion">教材版本：</string>
    <string name="hobby">特长爱好：</string>
    <string name="studyStatus">学习状态：</string>
    <string name="question_remind">学科强弱勾选：只有认真填写学习程度，才能获得精准辅导</string>
    <string name="serviceTerm">我已经阅读并同意相关服务条款和隐私政策</string>
    <string name="finish">填写完成</string>

    <!--常用按钮及其状态-->

    <string name="register">注册</string>
    <string name="already_register">已注册</string>
    <string name="no_account_to_register">还没有账号，点击注册</string>
    <string name="have_account_to_login">已有账号，立即登录</string>

    <string name="reset_password">重置密码</string>
    <string name="alter_password">修改密码</string>

    <string name="inputCode">输入验证码</string>
    <string name="get_verify_code">获取验证码</string>

    <string name="save">保存</string>
    <string name="toast_save_successful">保存成功</string>

    <string name="collect">收藏</string>
    <string name="my_collect">我的收藏</string>

    <string name="services_send">发送</string>
    <string name="sure">确定</string>

    <string name="refresh">刷新</string>
    <string name="delete">删除</string>
    <string name="add">添加</string>

    <string name="back">返回 </string>
    <string name="quit">退出</string>

    <string name="login">登录</string>
    <string name="login_now">立即登录</string>
    <string name="auto_login">自动登录</string>
    <string name="save_pwd">记住密码</string>
    <string name="welcome_login">欢迎登录·智能私教</string>
    <string name="welcome_register">欢迎注册·智能私教</string>
    <string name="register_now">立即注册</string>

    <string name="find_pwd">找回密码</string>
    <string name="jump">跳转</string>

    <!--其他状态信息-->
    <string name="weeks_monday">周一</string>
    <string name="weeks_tuesday">周二</string>
    <string name="weeks_wednesday">周三</string>
    <string name="weeks_thursday">周四</string>
    <string name="weeks_friday">周五</string>
    <string name="weeks_Saturday">周六</string>
    <string name="weeks_sunday">周日</string>

    <string name="nothing">无</string>

    <string name="set_ok">设置完成</string>
    <string name="data_not_null">数据不能为空</string>
    <string name="already_finish">已完成</string>

    <string name="account_hint">手机号/用户名</string>
    <string name="can_login_with_other">-------------用其他方式登录------------</string>

    <string name="register_remind">特别提醒：认真填写客户信息有利于更好地辅导学习</string>

    <string name="detail">详情</string>
    <string name="operate">操作</string>
    <string name="healthyAdviceCollect">健康收藏</string>
    <string name="my_history">历史消息</string>
</resources>