<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:gravity="center"
                        android:text="@string/quit"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/back" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <TextView
                        android:id="@+id/tv_to_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_account_to_register"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/shadow_bg">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="40dp"
                    android:paddingLeft="100dp"
                    android:paddingRight="100dp"
                    android:paddingTop="40dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/shadow_bg"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:text="@string/welcome_login"
                        android:textColor="@color/tomato"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/account" />

                        <EditText
                            android:id="@+id/et_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/account_hint"
                            android:inputType="number"
                            android:textSize="22sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/pwd" />

                        <EditText
                            android:id="@+id/et_pwd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_auto_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/auto_login"
                            android:textSize="22sp" />

                        <RadioButton
                            android:id="@+id/rb_save_pwd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/save_pwd"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:text="@string/find_pwd"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/button_bg"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/login_now"
                        android:textColor="@color/white"
                        android:textSize="28sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
