<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RadarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="#2477B8"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="3dp"
                        android:src="@drawable/back_blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:gravity="center"
                        android:text="@string/ct_user"
                        android:textColor="#2477B8"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="3dp"
                        android:src="@drawable/back_blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:gravity="center"
                        android:text="@string/radar_change"
                        android:textColor="#2477B8"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="3dp"
                        android:src="@drawable/back_blue" />

                    <TextView
                        android:id="@+id/rg_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/back"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/shadow_bg">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:paddingLeft="80dp"
                    android:paddingRight="80dp"
                    android:paddingTop="20dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="综合测评雷达图"
                        android:textColor="#4497D3"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <com.lehua.tablet0306.utils.RadarView
                        android:id="@+id/radar"
                        android:layout_width="400dp"
                        android:layout_height="350dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="本测评依据来源于个人中心信息"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/btn_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/button_bg"
                        android:paddingBottom="10dp"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"
                        android:paddingTop="10dp"
                        android:text="修改完成"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>>
</LinearLayout>