<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterQuestionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="25dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="27dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="3dp"
                            android:src="@drawable/back" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="3dp"
                            android:gravity="center"
                            android:text="@string/register"
                            android:textColor="#2477B8"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="27dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="3dp"
                            android:src="@drawable/back_blue" />

                        <TextView
                            android:id="@+id/tv_back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/back"
                            android:textSize="22sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/shadow_bg">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="40dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingTop="40dp">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="50dp"
                        android:background="@drawable/button_bg"
                        android:elevation="3dp"
                        android:paddingBottom="10dp"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:paddingTop="10dp"
                        android:text="小学"
                        android:textColor="@color/white"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_bg"
                        android:elevation="3dp"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp"
                        android:text="教材版本："
                        android:textColor="@color/white"
                        android:textSize="28sp" />

                    <LinearLayout
                        android:layout_width="500dp"
                        android:layout_height="50dp">

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
